@@ -1,0 +1,7 @@
+.omnivalt-order-detail .header {
+    margin-bottom: 1rem;
+}
+.omnivalt-order-detail .omnivalt-logo {
+    max-width: 110px;
+    height: auto;
+}
