@@ -1,0 +1,3 @@
+<div class="omnivalt-order-info">
+    <p>{l s="Your order will be delivered to Omniva parcel terminal" mod='omnivaltshipping'}: <b>{$terminal_address}</b></p>
+</div>
