@@ -1,0 +1,6 @@
+<div class="box omnivalt-order-detail">
+    <div class="header">
+        <img src="{$logo}" alt="Omniva Logo" class="omnivalt-logo" />
+    </div>
+    <p>{l s="Your order will be delivered to the parcel terminal" mod='omnivaltshipping'}: <b>{$terminal_address}</b></p>
+</div>
